added frontend for super admin list table

--- a/Views/SuperAdmin/Index.cshtml
+++ b/Views/SuperAdmin/Index.cshtml
@@ -14,36 +14,243 @@
     }
 }
 
+
+
+
+<main class="main">
+    <!-- <div class="dashboard"> -->
+    <div class="form-container">
+
+        <!-- Signup Form -->
+        <h1>Super Admin Dashboard</h1>
+
+
+        <div id="">
+            <!-- 
+            @using (Html.BeginForm("Login", "Home"))
+            {
+                    <p>Already have an account? <a href="#">Login
+                        </a></p>
+            }
+
+         -->
+            <table class="table table-info">
+                <thead>
+                    <tr>
+                        <th>S/N</th>
+
+                        <th>
+                            @Html.DisplayNameFor(model => model.Data.FirstName)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Data.LastName)
+                        </th>
+                        @*
+                        <th>
+                        @Html.DisplayNameFor(model => model.Data.StaffId)
+                        </th>
+                        <th>
+                        @Html.DisplayNameFor(model => model.Data.Email)
+                        </th>
+                        <th>
+                        @Html.DisplayNameFor(model =>
+                        model.Data.PhoneNumber)
+                        </th>
+                        <th>
+                        @Html.DisplayNameFor(model =>
+                        model.Data.HomeAddress)
+                        </th>
+                        <th>
+                        @Html.DisplayNameFor(model =>
+                        model.Data.ResidentialAddress)
+                        </th>
+
+                        <th>
+                        @Html.DisplayNameFor(model =>
+                        model.Data.DateOfBirth)
+                        </th>
+                        *@
+                        <th>
+                            @Html.DisplayNameFor(model => model.Data.Gender)
+                        </th>
+                        @*
+                        <th>
+                        @Html.DisplayNameFor(model =>
+                        model.Data.MaritalStatus)
+                        </th>
+                        <th>
+                        @Html.DisplayNameFor(model => model.Data.userRole)
+                        </th>
+                        <th>
+                        @Html.DisplayNameFor(model =>
+                        model.Data.BankAccountNumber)
+                        </th>
+                        <th>
+                        @Html.DisplayNameFor(model => model.Data.BankName)
+                        </th>
+                        <th>
+                        @Html.DisplayNameFor(model =>
+                        model.Data.GuarantorName)
+                        </th>
+                        <th>
+                        @Html.DisplayNameFor(model =>
+                        model.Data.GuarantorPhoneNumber)
+                        </th> *@
+                        <th>
+                            @Html.DisplayNameFor(model =>
+                            model.Data.GuarantorName)
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @{
+                        int serialNumber = 1;
+                    }
+                    @foreach (var item in Model)
+                    {
+
+                        @* <tr style="background-color: @(serialNumber % 2 == 0 ?
+                    "#f0f0f0" : "#ffffff");"> *@
+                        <tr>
+                            <td>
+                                @serialNumber
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.FirstName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.LastName)
+                            </td>
+                            @*
+                        <td>
+                        @Html.DisplayFor(modelItem => item.Data.StaffId)
+                        </td>
+                        <td>
+                        @Html.DisplayFor(modelItem => item.Data.Email)
+                        </td>
+                        <td>
+                        @Html.DisplayFor(modelItem => item.Data.PhoneNumber)
+                        </td>
+                        <td>
+                        @Html.DisplayFor(modelItem => item.Data.HomeAddress)
+                        </td>
+                        <td>
+                        @Html.DisplayFor(modelItem =>
+                        item.Data.ResidentialAddress)
+                        </td>
+
+                        <td>
+                        @Html.DisplayFor(modelItem =>
+                        item.Data.DateOfBirth,"{0:MM/dd/yyyy}")
+                        </td>
+                        *@
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.Gender)
+                            </td>
+                            @*
+                        <td>
+                        @Html.DisplayFor(modelItem =>
+                        item.Data.MaritalStatus)
+                        </td>
+                        <td>
+                        @Html.DisplayFor(modelItem => item.Data.userRole)
+                        </td>
+                        <td>
+                        @Html.DisplayFor(modelItem =>
+                        item.Data.BankAccountNumber)
+                        </td>
+                        <td>
+                        @Html.DisplayFor(modelItem => item.Data.BankName)
+                        </td>
+                        <td>
+                        @Html.DisplayFor(modelItem =>
+                        item.Data.GuarantorName)
+                        </td>
+                        <td>
+                        @Html.DisplayFor(modelItem =>
+                        item.Data.GuarantorPhoneNumber)
+                        </td> *@
+
+                            <td>
+                                @Html.DisplayFor(modelItem =>
+                            item.Data.GuarantorName)
+                            </td>
+                            <td>
+                                <a asp-action="Edit"
+                                asp-route-staffId="@item.Data.StaffId">Edit</a>
+                                |
+                                <a asp-action="Details"
+                                asp-route-staffId="@item.Data.StaffId">Details</a>
+                                |
+                                <a asp-action="DeletePreview"
+                                asp-route-staffId="@item.Data.StaffId">Delete</a>
+                            </td>
+                        </tr>
+                        serialNumber++;
+                    }
+                </tbody>
+            </table>
+
+        </div>
+
+        <!-- Login Form -->
+        <!-- 
+
+        <div id="">
+
+        @using (Html.BeginForm("Login", "Home"))
+        {
+                        <p>Don't have an account? <a href="#">Sign up</a></p>
+
+        }
+        </div>
+
+        -->
+    </div>
+
+    <!-- search box  -->
+    <div class="search-container">
+        <form>
+            <input type="text" placeholder="Search...">
+            <button type="submit"><i class="fa fa-search"></i> Search </button>
+        </form>
+    </div>
+
+</main>
+@*
 <h1>Super Admin Dashboard</h1>
 
 
 <div class="dropdown">
-    <button class="dropbtn"> Manage Attendant</button>
-    <div class="dropdown-menu">
-        <a asp-controller="Attendant" asp-action="Dashboard"> Dashboard </a>
-        <br />
-        <a asp-controller="Attendant" asp-action="Create">Add new attendant</a> 
-        <br />
-        <a asp-controller="Attendant" asp-action="Index">View all attendant</a>
-        <br />
+<button class="dropbtn"> Manage Attendant</button>
+<div class="dropdown-menu">
+<a asp-controller="Attendant" asp-action="Dashboard"> Dashboard </a>
+<br />
+<a asp-controller="Attendant" asp-action="Create">Add new attendant</a>
+<br />
+<a asp-controller="Attendant" asp-action="Index">View all attendant</a>
+<br />
 
-    </div>
+</div>
 </div>
 
 <div class="dropdown">
-    <button class="dropbtn"> Manage Product</button>
-    <div class="dropdown-menu">
-        <a asp-controller="Product" asp-action="Dashboard"> Dashboard</a>
-        <br />
-        <a asp-controller="Product" asp-action="Create">Add new product</a>
-        <br />
-        <a asp-controller="Product" asp-action="Index">Manage all products</a>
-        <br />
-    </div>
+<button class="dropbtn"> Manage Product</button>
+<div class="dropdown-menu">
+<a asp-controller="Product" asp-action="Dashboard"> Dashboard</a>
+<br />
+<a asp-controller="Product" asp-action="Create">Add new product</a>
+<br />
+<a asp-controller="Product" asp-action="Index">Manage all products</a>
+<br />
+</div>
 </div>
 <a asp-controller="Transaction" asp-action="Index">Manage Transactions</a>
 <br />
 <a asp-controller="Product" asp-action="Dashboard">Manage Inventory</a>
+
+*@
 <br />
 <br />
 <br />
