--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success">Login</button> ||
+                    <button type="submit" class="btn btn-success"><i class="fa fa-user"></i> Login</button> ||
                     <a asp-controller="Home" asp-action="resetPasswprd" class="btn
                     btn-danger"> Forget Password</a>
                 </div>
