--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,81 +16,131 @@
     </head>
 
     <body>
-            <header>
-                <nav class="navbar navbar-expand-sm navbar-toggleable-sm
-                    navbar-light bg-white border-bottom box-shadow mb-3">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" asp-area=""
-                            asp-controller="Home"
-                            asp-action="Index">Colon Sales Record</a>
-                    @* MDelete *@
-                        <button class="navbar-toggler" type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target=".navbar-collapse"
-                            aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle
-                            navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                    @* MDelete *@
+        <header>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm
+                navbar-light bg-white border-bottom box-shadow mb-3">
+                <div class="container-fluid">
+                    <a class="navbar-brand" asp-area=""
+                        asp-controller="Home"
+                        asp-action="Index">Colon Sales Record</a>
+                @* MDelete *@
+                    <button class="navbar-toggler" type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target=".navbar-collapse"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle
+                        navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                @* MDelete *@
 
-                        <div class="navbar-collapse collapse d-sm-inline-flex
-                            justify-content-between">
-                            <ul class="navbar-nav flex-grow-1">
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area=""
-                                        asp-controller="Home"
-                                        asp-action="Index">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area=""
-                                        asp-controller="Home"
-                                        asp-action="Privacy">About
-                                        us</a>
-                                </li>
+                    <div class="navbar-collapse collapse d-sm-inline-flex
+                        justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area=""
+                                    asp-controller="Home"
+                                    asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area=""
+                                    asp-controller="Home"
+                                    asp-action="Privacy">About
+                                    us</a>
+                            </li>
 
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area=""
-                                        asp-controller="Home"
-                                        asp-action="Privacy">Contact
-                                        us</a>
-                                </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area=""
+                                    asp-controller="Home"
+                                    asp-action="Privacy">Contact
+                                    us</a>
+                            </li>
 
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area=""
-                                        asp-controller="Home"
-                                        asp-action="Privacy">Privacy</a>
-                                </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area=""
+                                    asp-controller="Home"
+                                    asp-action="Privacy">Privacy</a>
+                            </li>
 
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area=""
-                                        asp-controller="Home"
-                                        asp-action="Privacy">News</a>
-                                </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area=""
+                                    asp-controller="Home"
+                                    asp-action="Privacy">News</a>
+                            </li>
 
-                            </ul>
+                        </ul>
 
 
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area=""
-                                        asp-controller="Home"
-                                        asp-action="Login">Login</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area=""
-                                        asp-controller="Customer"
-                                        asp-action="Create">Sign-Up</a>
-                                </li>
-                            </ul>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area=""
+                                    asp-controller="Home"
+                                    asp-action="Login">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area=""
+                                    asp-controller="Customer"
+                                    asp-action="Create">Sign-Up</a>
+                            </li>
+                        </ul>
 
-                        </div>
                     </div>
-                </nav>
-            </header>
+                </div>
+            </nav>
+        </header>
 
-        @* <div class="wrapper"> *@
-        @* <div class="bodycontain bd-bline"> *@
+    @* <div class="wrapper"> *@
+        <div class="bodycontain bd-bline">
+
+
+
+
+
+
+            <div class="sidebar ">
+                <h3>Navigation</h3>
+                <ul>
+
+                    <li><a asp-area="" asp-controller="" asp-action="">Home</a></li>
+                    @* <li><a href="#"></a></li> *@
+
+                    <li class="dropdown">
+                        <a href="#">Attendants</a>
+                        <ul class="dropdown-content">
+                            <li><a asp-area="" asp-controller="Attendant" asp-action="Create">Create Attendants</a></li>
+                            <li><a asp-area="" asp-controller="Attendant" asp-action="">Manage Attendants</a></li>
+                            <li><a asp-area="" asp-controller="Attendant" asp-action="">View all attendants</a></li>
+                        </ul>
+                    </li>
+                    
+                    <li class="dropdown">
+                        <a  href="#">Customers</a>
+                        <ul class="dropdown-content">
+                            <li><a asp-area="" asp-controller="Customer" asp-action="Create">Create Customer</a></li>
+                            <li><a asp-area="" asp-controller="Customer" asp-action="">Manage Customer</a></li>
+                            <li><a asp-area="" asp-controller="Customer" asp-action="">View all Customers</a></li>
+                        </ul>
+                    </li>
+                   
+                    <li class="dropdown">
+                        <a  href="#">Products</a>
+                        <ul class="dropdown-content">
+                            <li><a asp-area="" asp-controller="Product" asp-action="Create">Add new products</a></li>
+                            <li><a asp-area="" asp-controller="Product" asp-action="">Manage Product</a></li>
+                            <li><a asp-area="" asp-controller="Product" asp-action="">View all Products</a></li>
+                        </ul>
+                    </li>
+
+                    @* <li><a href="#">Products</a></li> *@
+                    <li><a asp-area="" asp-controller="Transaction" asp-action="">Transactions</a></li>
+                </ul>
+            </div>
+
+
+
+
+
+
             <div class="bodycontains">
                 <main role="main" class="pb-3">
                     <div class="bd-line">
@@ -99,15 +149,19 @@
                     </div>
                 </main>
             </div>
-        
+
+
+
+        </div>
+
     @* <div class="footercontain bd-gline"> *@
 
-        @* <footer class="border-top footer text-muted">
-            <div class="container">
-                &copy; 2022 - SMS_MVCDTO - <a asp-area=""
-                    asp-controller="Home"
-                    asp-action="Privacy">Privacy</a>
-            </div>
+    @* <footer class="border-top footer text-muted">
+        <div class="container">
+        &copy; 2022 - SMS_MVCDTO - <a asp-area=""
+        asp-controller="Home"
+        asp-action="Privacy">Privacy</a>
+        </div>
         </footer> *@
     @* </div> *@
 
