--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -1,4 +1,3 @@
-
 /*  */
 *,
 *::before,
@@ -24,17 +23,18 @@ body {
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     /*  */
-    background-image: linear-gradient(260deg, #f3f0f0b0 10%, #dbece1 90%, #ecfcf2 5%);
+    background-image: linear-gradient(260deg, #f3f0f0b0 10%, #dbece1 75%, #ecfcf2 5%);
 
 }
 
 .bd-line {
     border: 10px solid red;
 }
+
 /* all for table  */
 table {
     table-layout: fixed;
-    width: 980px;
+    max-width: 900px;
     border-collapse: collapse;
     box-shadow: 10px 10px 5px #888888d2;
 
@@ -138,13 +138,21 @@ tr:nth-child(odd) {
     display: flex;
     flex: 3;
     padding: 1rem;
-    margin-left: 220px;
+    /* margin-left: 220px; */
     border: 5px solid rgb(20, 209, 10);
     /* width: auto; */
     height: fit-content;
     flex-wrap: wrap;
+    
     /* flex-direction: column; */
 }
+
+
+.bodycontain{
+    display: flex;
+    /* flex-wrap: wrap; */
+}
+
 
 section {
     border: 2px solid red;
@@ -196,17 +204,40 @@ nav a {
 }
 
 
+.sidebar>ul a{
+    /* color: #e6e6e6; */
+    /* color: #ffb6c1; */
+    /* color: #68c6e6; */
+    /* color: #c0c0c0; */
+    /* color: #fef6f6; */
+    color: #fef6f6;
+    font-weight: bold;
+    text-shadow: 2px 2px  rgba(0, 0, 0, 0.275);
+
+}
+
+
+.bodycontains{
+    flex: 2;
+}
+
 
 
 /* for side bar  */
 .sidebar {
-    background-color: rgba(243, 240, 240, 0.692);
-    height: 100%;
+    /* background-color: rgba(243, 240, 240, 0.692); */
+    /* background-color: #5a665e; */
+    background-color: #87a593;
+    /* background-color:  linear-gradient(260deg, #086787cf 10%, #1b7038 50%, #18b752 15%); */
+    /* height: 100%; */
     width: 230px;
-    position: absolute;
+    /* position: absolute; */
     padding: 20px;
     /* color: #fff; */
-    float: left;
+    /* float: left; */
+    border-radius: 5px;
+    border: 1px solid rgb(121, 118, 118);
+    box-shadow: 10px 10px 15px #888888;
 
 }
 
@@ -257,21 +288,51 @@ h3 {
 
 }
 
-.sidebar .dropdown-content {
 
+.dropdown-content {
     display: none;
     position: absolute;
+    /* background-color: #333; */
+    /* min-width: 200px; */
     z-index: 1;
-    background-color: #ffffff;
+}
+
+
+.sidebar .dropdown>.dropdown-content{
+    /* color: #000000; */
+    font-weight: bold;
+    text-shadow: 1px 1px  rgba(0, 0, 0, 0.138);
+
+}
+/* 
+.sidebar .dropdown>.dropdown-content li{
+    color: #000000;
+
+} */
+
+.sidebar .dropdown-content {
+
+    /* display: none; */
+    /* position: absolute; */
+    /* z-index: 1; */
+    background-color: #93b5a1;
     min-width: 195px;
     box-shadow: 0px 8px 16px 0px rgba(red, green, blue, 0.2);
     border-radius: 10px;
 
 }
 
+.sidebar .dropdown-content li {
+    padding-top: 0px;
+    /* display: block; */
+    padding-bottom: 0px;
+    /* margin-top: 0px; */
+    margin-bottom: 1px;
+    border-bottom: 1px solid #000;
+}
 
 .sidebar .dropdown-content a {
-    color: black;
+    color: rgb(202, 247, 198);
     /* padding: 12px 16px; */
     text-decoration: none;
     display: block;
@@ -279,20 +340,14 @@ h3 {
 
 
 .sidebar .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: rgb(66, 64, 64);
+    border-radius: 5px;
 }
 
 .sidebar .dropdown:hover .dropdown-content {
     display: block;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    min-width: 200px;
-    z-index: 1;
-}
 
 .sidebar li>a {}
 
@@ -323,14 +378,19 @@ form {
     align-items: center;
 }
 
+.search-container-side button[type="submit"] {
+    margin-top: -13px;
+    /* padding-top: 0px; */
+}
+
 input[type="text"],
 input[type="email"],
 input[type="password"] {
     margin-bottom: 20px;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 10px;
     border: 1px solid #ccc;
-    width: 100%;
+    width: 110%;
 }
 
 input[type="reset"] {
@@ -384,12 +444,25 @@ button[type="reset"]+button[type="submit"] {
     display: none;
 }
 
+.search-container-side {
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border: 3px solid #0077ff;
+    margin-bottom: 0px;
+    /* width: 250px; */
+    /* margin: 0px; */
+
+}
+
 .search-container {
     /* display: flex; */
     align-items: center;
     justify-content: center;
     padding: 10px;
     border: 3px solid #0077ff;
+    margin-bottom: 0px;
     /* width: 250px; */
     /* margin: 0px; */
 
